Fix app scroll glitch on iOS

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -176,7 +176,6 @@ header .subtitle {
   border: none;
   padding: 0;
   height: inherit;
-  min-height: 44px;
 
   .icon {
     padding-top: 12px;
