--- a/src/styles/common/app-wide.scss
+++ b/src/styles/common/app-wide.scss
@@ -31,6 +31,6 @@ body {
 }
 
 .content {
-  min-height: 100vh;
+  height: 100vh;
   position: relative !important;
 }
