--- a/src/styles/common/dialog.scss
+++ b/src/styles/common/dialog.scss
@@ -14,6 +14,7 @@
 
 #dialog .content {
   width: 80%;
+  height: initial;
   max-height: 70%;
   min-height: 0;
   background-color: $color-white;
@@ -22,7 +23,7 @@
   top: 20%;
   left: 50%;
   margin-left: -40%;
-  overflow: hidden;
+  overflow: scroll;
 
   //ionic animations
   -webkit-animation-name: superScaleIn;
